--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
 
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlack">#000000</color>
-    <color name="textColor">#212121</color>
+    <color name="textColor">#7F000000</color>
     <color name="divider">#CBCBCB</color>
 </resources>
